{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 1604,
  "lineage": "2cdd7a93-a091-2e16-9a40-f0b3c562d85d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "enricos-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:vpc/vpc-011fcfd3df542915e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054ecf10f0c44b95f",
            "default_route_table_id": "rtb-03ad88c727e6feccb",
            "default_security_group_id": "sg-046d8c876de476be0",
            "dhcp_options_id": "dopt-02267e0ec9331b48b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011fcfd3df542915e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ad88c727e6feccb",
            "owner_id": "650171864672",
            "tags": {
              "Name": "enricos-vpc"
            },
            "tags_all": {
              "Name": "enricos-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.private-net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:route-table/rtb-07c41edcd447ab030",
            "id": "rtb-07c41edcd447ab030",
            "owner_id": "650171864672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0818ddb70015bbd83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_eip.nat",
            "module.vpc.module.public-net.aws_internet_gateway.igw",
            "module.vpc.module.public-net.aws_nat_gateway.public",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private-net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cf7a5706e9942ef",
            "route_table_id": "rtb-07c41edcd447ab030",
            "subnet_id": "subnet-04653cecc4a461dbb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.private-net.aws_route_table.private",
            "module.vpc.module.private-net.aws_subnet.private-subnets",
            "module.vpc.module.public-net.aws_eip.nat",
            "module.vpc.module.public-net.aws_internet_gateway.igw",
            "module.vpc.module.public-net.aws_nat_gateway.public",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        },
        {
          "index_key": "vpn-clients",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afcf129d679d12dd",
            "route_table_id": "rtb-07c41edcd447ab030",
            "subnet_id": "subnet-0c6ada640f8435396"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.private-net.aws_route_table.private",
            "module.vpc.module.private-net.aws_subnet.private-subnets",
            "module.vpc.module.public-net.aws_eip.nat",
            "module.vpc.module.public-net.aws_internet_gateway.igw",
            "module.vpc.module.public-net.aws_nat_gateway.public",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private-net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:subnet/subnet-04653cecc4a461dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04653cecc4a461dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650171864672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc"
          ]
        },
        {
          "index_key": "vpn-clients",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:subnet/subnet-0c6ada640f8435396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ada640f8435396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650171864672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpn-clients"
            },
            "tags_all": {
              "Name": "vpn-clients"
            },
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-instances",
      "mode": "data",
      "type": "aws_eip",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-008257e1aa178b558",
            "domain": "vpc",
            "id": "eipalloc-05502308121c3115c",
            "instance_id": "i-06328d20bead03c12",
            "network_interface_id": "eni-0bd6850e9128dac43",
            "network_interface_owner_id": "650171864672",
            "private_dns": "ip-10-0-15-242.eu-central-1.compute.internal",
            "private_ip": "10.0.15.242",
            "public_dns": "ec2-18-156-158-149.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.158.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpn"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.public-instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:650171864672:instance/i-05c7605f43e6ad05d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c7605f43e6ad05d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "enrico-mbp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1b99039fea5a964",
            "private_dns": "ip-10-0-12-54.eu-central-1.compute.internal",
            "private_ip": "10.0.12.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d74a4b424e6c5bb8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f905c91644964a3"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08531ec7d27c8fe0a",
            "tags": {
              "Name": "OpenVpn"
            },
            "tags_all": {
              "Name": "OpenVpn"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f905c91644964a3"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route53_zone.private-zone",
            "module.vpc.module.public-instances.aws_security_group.openvpn-sg",
            "module.vpc.module.public-net.aws_eip.vpn",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:security-group/sg-01f905c91644964a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f905c91644964a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "openvpn-sg",
            "name_prefix": "",
            "owner_id": "650171864672",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route53_zone.private-zone",
            "module.vpc.aws_vpc.enricos-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b816a4209045add",
            "association_id": "eipassoc-0f652177a12fa2811",
            "domain": "vpc",
            "id": "eipalloc-02b816a4209045add",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d2297ea88b967321",
            "private_dns": "ip-10-0-21-16.eu-central-1.compute.internal",
            "private_ip": "10.0.21.16",
            "public_dns": "ec2-18-196-58-177.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.58.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05502308121c3115c",
            "association_id": "eipassoc-008257e1aa178b558",
            "domain": "vpc",
            "id": "eipalloc-05502308121c3115c",
            "instance": "i-06328d20bead03c12",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0bd6850e9128dac43",
            "private_dns": "ip-10-0-15-242.eu-central-1.compute.internal",
            "private_ip": "10.0.15.242",
            "public_dns": "ec2-18-156-158-149.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.158.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpn"
            },
            "tags_all": {
              "Name": "vpn"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:internet-gateway/igw-03ff94b18b5ad4ca6",
            "id": "igw-03ff94b18b5ad4ca6",
            "owner_id": "650171864672",
            "tags": {
              "Name": "public-subnet-igw"
            },
            "tags_all": {
              "Name": "public-subnet-igw"
            },
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.enricos-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b816a4209045add",
            "connectivity_type": "public",
            "id": "nat-0818ddb70015bbd83",
            "network_interface_id": "eni-0d2297ea88b967321",
            "private_ip": "10.0.21.16",
            "public_ip": "18.196.58.177",
            "subnet_id": "subnet-08531ec7d27c8fe0a",
            "tags": {
              "Name": "public Nat gw"
            },
            "tags_all": {
              "Name": "public Nat gw"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_eip.nat",
            "module.vpc.module.public-net.aws_internet_gateway.igw",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:route-table/rtb-06f090df28fed1baa",
            "id": "rtb-06f090df28fed1baa",
            "owner_id": "650171864672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ff94b18b5ad4ca6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070cefdf1161c5721",
            "route_table_id": "rtb-06f090df28fed1baa",
            "subnet_id": "subnet-08531ec7d27c8fe0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc",
            "module.vpc.module.public-net.aws_internet_gateway.igw",
            "module.vpc.module.public-net.aws_route_table.public",
            "module.vpc.module.public-net.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public-net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650171864672:subnet/subnet-08531ec7d27c8fe0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08531ec7d27c8fe0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650171864672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-011fcfd3df542915e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.enricos-vpc"
          ]
        }
      ]
    }
  ]
}